# python-labs

./: .gitignore  Pipfile  nx_simple.html  requirements.txt
NetworkX/: first-tests.py
Pandas/: first_dataset.py  tool_comparison.csv
boto3/: dynamodb_query.py  profile_test.py
django/django_test/django_test/: settings.py  urls.py
django/django_test/movie/: views.py
django/django_test/movie/migrations/: 0001_initial.py
docker/docker-hello-world/: Dockerfile
docker/docker-hello-world/boto3/: ecr_test.py
docker/docker-hello-world/deploy/: hello_world.py
docker/docker-s3fs/: Dockerfile  LICENCE  README.md  requirements.txt
docker/docker-s3fs/deploy/: main.py
introducing-python-labs/: chapter-1-2.py  chapter-11.py  chapter-14.py  chapter-15-multiprocessing.py  chapter-15.py  chapter-16-redis.py  chapter-16.py  chapter-17.py  chapter-18.py  chapter-19.py  chapter-20.py  chapter-21.py  chapter-5-6.py  chapter-7-8.py  comprehension.py  logic.py  paths.py  settings.cfg  tasks.py  test.csv
introducing-python-labs/modules/: module_child.py  module_parent.py
packa-test/: README.md  pyproject.toml
packa-test/src/get_new_id/: __init__.py
packa2-test/: pyproject.toml
packa2-test/src/defaultstart/: __init__.py  defaultstart.py  getnewid.py  test_default.py  xyz_logger.py
packa3-test/: README.md  pyproject.toml
packa3-test/src/getnewid/: __init__.py  getnewid.py  newtest.py
poetry_test/: pyproject.toml
pypi_test/: pypi_test.py  test_local_package.py
simple-tests/: chapter-10.py  chapter-3-4.py  chapter-7-8.py  chapter-8-exercise.py  chapter-9.py
(+3 files in other folders)
