[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "defaultstart"
authors = [{name = "Vladimir Baranek", email = "k041k4@gmail.com"}]
version = "0.1.4"
description = "Default Start for all modules"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/k041k4/python-labs/"